--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "gulp": "~3.5.1",
     "gulp-rename": "~0.2.2",
     "gulp-uglify": "~0.2.0",
-    "gulp-concat": "~2.1.7"
+    "gulp-concat": "~2.1.7",
+    "gulp-git": "~0.3.0",
+    "gulp-jshint": "~1.3.4",
+    "jshint-stylish": "~0.1.5"
   }
 }
