--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Thin namespaced wrapper for localStorage",
   "main": "tote.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "harp server www"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "gulp-concat": "~2.1.7",
     "gulp-git": "~0.3.0",
     "gulp-jshint": "~1.3.4",
-    "jshint-stylish": "~0.1.5"
+    "jshint-stylish": "~0.1.5",
+    "exec": "~0.1.0"
   }
 }
