--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp-git": "~0.3.2",
     "gulp-jshint": "~1.4.2",
     "jshint-stylish": "~0.1.5",
-    "exec": "~0.1.0"
+    "exec": "~0.1.0",
+    "gulp-bump": "^0.1.5",
+    "gulp-size": "^0.1.3"
   }
 }
