--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jshint-stylish": "~0.1.5",
     "exec": "~0.1.0",
     "gulp-bump": "^0.1.5",
-    "gulp-size": "^0.1.3"
+    "gulp-size": "^0.1.3",
+    "run-sequence": "^0.3.6"
   }
 }
