--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-bump": "^0.1.5",
     "gulp-size": "^0.1.3",
     "run-sequence": "^0.3.6",
-    "gulp-exec": "^1.0.4"
+    "gulp-exec": "^1.0.4",
+    "gulp-task-listing": "~0.2.2"
   }
 }
